--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "type": "git",
     "url": "git://github.com/drudge/mongoose-timestamp"
   },
+  "dependencies": {
+    "captain-hook": "0.0.3"
+  },
   "devDependencies": {
     "mongoose": "~3.8.8",
     "should": "~3.2.0",
