--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
-  "name": "mongoose-history",
-  "description": "Mongoose plugin that adds createdAt and updatedAt auto-assigned date properties. Then it creates a history object which holds a copy of the current state.",
+  "name": "mongoose-timestamp",
+  "description": "Mongoose plugin that adds createdAt and updatedAt auto-assigned date properties.",
   "version": "0.5.0",
-  "author": "Publicis <andrew.apperley@publicis.ca>",
   "keywords": [
     "mongodb",
     "mongoose",
     "plugin",
     "timestamps",
     "createdAt",
-    "updatedAt",
-    "history"
+    "updatedAt"
   ],
   "repository": {
     "type": "git",
     "url": "git://github.com/drudge/mongoose-timestamp"
-  },
-  "dependencies": {
-    "captain-hook": "0.0.3"
   },
   "devDependencies": {
     "mongoose": "~3.8.8",
